fix UI jump when navigating to page with scrollbar

--- a/app/app.scss
+++ b/app/app.scss
@@ -50,3 +50,7 @@
  @import "components/OnBoarding/TermsOfService/TermsOfService";
  //
  #root { height: 100%; }
+
+ html {
+  overflow-y: scroll;
+}
